--- a/src/css/style.css
+++ b/src/css/style.css
@@ -257,6 +257,12 @@ p {
     font-size: 14px;
   }
 }
+@media screen and (max-width: 1230px) {
+  .abt-item2 {
+    grid-column: 5/span 4;
+    grid-row: 1/span 8 !important;
+  }
+}
 @media screen and (max-width: 550px) {
   .abt-item p {
     font-size: 12px;
